# chebyshev

./: .gitignore  CHANGELOG.md  LICENSE  README.md  chebyshev.cabal
doc/: design-notes.md
src/Numeric/: Chebyshev.hs  Fourier.hs
src/Numeric/Chebyshev/: Examples.hs  Internal.hs  Polynomial.hs  Util.hs
