cabal-version:      2.4
name:               chebyshev
version:            0.1.0.0
synopsis:
    Functions on the interval [-1,1],
    efficiently approximated using Chebyshev polynomials.
description:
    This package provides an efficient representation
    of real-valued functions on the finite interval [-1,1]
    in terms of Chebyshev polynomials.
    .
    This package is directly inspired by the
    /Chebfun/ package for MATLAB, available at https://www.chebfun.org .
category:           Math, Numeric

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          (c) 2021-2022 Heinrich Apfelmus
author:             Heinrich Apfelmus
maintainer:         apfelmus at quantentunnel dot de
bug-reports:        https://github.com/HeinrichApfelmus/chebyshev

extra-source-files:
    CHANGELOG.md
  , README.md

library
    exposed-modules:
        Numeric.Fourier
        Numeric.Chebyshev
        Numeric.Chebyshev.Examples
        Numeric.Chebyshev.Polynomial
        Numeric.Chebyshev.Util
    build-depends:
        base ^>=4.14.3.0
      , vector ^>= 0.12.3.1
      , hvega ^>= 0.12.0.3
    hs-source-dirs:   src
    default-language: Haskell2010
